2/8 read me file added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
     <!--I removed <ul> and <li> to consolidate and define the navigation links at the top of the page.-->
-    <!--I made changes in CSS .header nav and nav a to reflect function on the website-->
+    <!--I made changes in CSS nav and nav a to reflect function on the website-->
     <!--CSS padding-top and margin-right were changed in .header nav to 0px and 10px-->    
         <nav>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
