--- a/index.html
+++ b/index.html
@@ -24,24 +24,29 @@
     </header>
     <div class="hero"></div>
     <main>
-        <!--main section of the page-->
-        <!--changed class to ID-->
-        <!--Added Alt text allows accessability to users with visual impairment-->
+        <!-- changed div to main, this is the main portion of the page-->
+        <!-- changed class to service-name -->
+        <!-- created section in main -->
         <section id="search-engine-optimization" class="service-name">
+            <!--added alt text for photos displayed-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="picture of notebook" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
+        <!-- changed class to service-name -->
         <section id="online-reputation-management" class="service-name">
+            <!--added alt text for photos displayed-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="laptop displaying increase of positive repuation"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
+        <!-- changed class to service-name -->
         <section id="social-media-marketing" class="service-name">
+           <!--added alt text for photos displayed-->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="picture of collective group effort"/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -49,7 +54,10 @@
             </p>
         </section>
     </main>
+    <!--Added semantic element aside to organize the benefits section of the page, removed div-->
+    <!-- changed aside class to benefits -->
     <aside class="benefits">
+        <!-- changed div class to benefit -->
         <div class="benefit">
             <!--added alt text for photos displayed-->
             <h3>Lead Generation</h3>
@@ -58,14 +66,18 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
+        <!-- changed div to benefit -->
         <div class="benefit">
             <h3>Brand Awareness</h3>
+            <!-- added alt text for photos displayed-->
             <img src="./assets/images/brand-awareness.png" alt="light bulb"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
+        <!-- changed div class to benefit -->
         <div class="benefit">
+            <!-- added alt text for photos displayed-->
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="money strategy displays coin" />
             <p>
@@ -73,6 +85,7 @@
             </p>
         </div>
     </aside>
+    <!--added footer to page -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
